--- a/app/views/partials/_booking_form.html.erb
+++ b/app/views/partials/_booking_form.html.erb
@@ -12,12 +12,12 @@
   <%= f.fields_for :passengers do | passenger | %>
   <%= render 'partials/passenger_fields', f: passenger %>
   <% end %>
-  <div class="links">
-    <%= link_to_add_association content_tag(:span, 'Add Passenger', class: "add_passenger"), f, :passengers, partial: "partials/passenger_fields", :class => 'btn btn-primary add', onclick: "passenger_calc('add')" %>
+  <div class="links form-inline">
+    <%= link_to_add_association content_tag(:span, 'Add Passenger', class: "add_passenger"), f, :passengers, partial: "partials/passenger_fields", class: "btn btn-primary add form-control", onclick: "passenger_calc('add')" %>
     <% if @booking.new_record? %>
-      <%= submit_tag( "Book Flight", {class: "btn btn-default"}) %>
+      <%= submit_tag( "Book Flight", {class: "btn btn-default form-control pull-right"}) %>
       <% else %>
-      <%= submit_tag( "Save", {class: "btn btn-default"}) %>
+      <%= submit_tag( "Save", {class: "btn btn-default pull-right"}) %>
       <% end %>
   </div>
 <% end %>
