--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,4 +1,4 @@
-
+<!--
 <div class="jumbotron">
   <div class="container">
     <div class="row">
@@ -19,4 +19,75 @@
       </div>
     </div>
   </div>
+</div> -->
+
+<!-- <div class="jumbotron">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6">
+        <h1><%= @flight.airplane.airline.name%></h1>
+        <p><strong>Departure Airport: </strong><%= @flight.from.name%></p>
+        <p><strong>Arrival Airport: </strong><%= @flight.to.name%></p>
+        <p><strong>Airplane Name: </strong><%= @flight.airplane.name%></p>
+        <p><strong>Flight Code: </strong><%= @flight.flight_code%></p>
+        <% cost = @flight.price %>
+         <p><strong>Number of Passenger:</strong><%= @number_of_passengers%></p>
+        <p><strong>Price:</strong> <%= cost %></p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Reserve Seat</a></p>
+      </div>
+      <div class="col-lg-6">
+        <h2> Passenger Details </h2>
+        <%= render 'partials/booking_form' %>
+
+      </div>
+    </div>
+  </div>
+</div>
+ -->
+<div id="intro">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-7">
+      <h1 class="text-left"><%=@flight.airplane.airline.name%></h1>
+        <table class="table table-hover">
+         <tbody>
+            <tr>
+              <th>Departure Airport</th>
+              <td class=""><%= @flight.from.name%></td>
+          </tr>
+
+          <tr>
+            <th>Arrival Airport</th>
+            <td class=""><%= @flight.to.name%></td>
+          </tr>
+
+          <tr>
+            <th>Airplane Name</th>
+            <td class=""><%= @flight.airplane.name %></td>
+          </tr>
+
+          <tr>
+            <th>Flight Code</th>
+            <td class=""><%= @flight.flight_code%></td>
+          </tr>
+
+          <tr>
+            <th>Number of Passenger</th>
+            <td class="pass "><%= @number_of_passengers%></td>
+          </tr>
+
+          <tr>
+            <th>Price Per Passenger</th>
+            <td class=""><%= @flight.price %></td>
+          </tr>
+         </tbody>
+        </table>
+      </div>
+      <div class="col-lg-5">
+        <h1 class="text-left">Add Passengers</h1>
+        <%= render 'partials/booking_form' %>
+      </div>
+    </div> <!--/ .container -->
+  </div><!--/ #introwrap -->
+  <hr>
 </div>
