--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -45,7 +45,7 @@
               <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-12">
                   <div class="form-group">
-                    <select name="flight[no_of_passenger]" id="to_airport"  class="form-control" data-toggle="tooltip" data-placement="top" title="No. of Passengers">
+                    <select name="flight[no_of_passenger]" id="num_pass"  class="form-control" data-toggle="tooltip" data-placement="top" title="No. of Passengers">
                       <% (1..10).to_a.each do |i|%>
                       <option value="<%= i %>"><%= i %></option>
                       <% end %>
@@ -64,7 +64,7 @@
 
               </div>
 
-              <%= button_tag(type: "submit", class: "btn btn-info btn-block") do %>
+              <%= button_tag(type: "submit", class: "btn btn-info btn-block", id: "fsearch") do %>
                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search
               <% end %>
 
@@ -87,7 +87,3 @@
 
 
 <div id="flight-result"></div>
-
-
-
-  
