test(model): add Booking_spec.rb

--- a/app/views/flight/all.html.erb
+++ b/app/views/flight/all.html.erb
@@ -19,7 +19,7 @@
   <% departure_time = flight.dept_time %>
   <% price = flight.price %>
   <% flight_datails = [origin,destination,airline,departure_date,departure_time,price] %>
-    <tr>
+    <tr id="fl">
     <% counter = 0 %>
     <% while counter < 6 %>
     <td><%= flight_datails[counter] %> </td>
@@ -29,7 +29,7 @@
 
     <!-- <td><%= link_to "Book", new_booking_path(booking_details), class: "btn btn-default" %></td> -->
     <!-- <td><a class="btn btn-info" href="<%= new_booking_path(booking_details) %>"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span> Book</a></td> -->
-    <td><%= link_to new_booking_path(booking_details), :class => 'btn btn-info' do %>
+    <td><%= link_to new_booking_path(booking_details), :class => 'btn btn-info', id: 'bkfl' do %>
     <span class="glyphicon glyphicon-plane" aria-hidden="true">Book</span>
     <% end %>
   </td>
