--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,27 +1,4 @@
 
-<!-- <div class="jumbotron">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6">
-        <h1><%= @flight.airplane.airline.name%></h1>
-        <p><strong>Departure Airport: </strong><%= @flight.from.name%></p>
-        <p><strong>Arrival Airport: </strong><%= @flight.to.name%></p>
-        <p><strong>Airplane Name: </strong><%= @flight.airplane.name%></p>
-        <p><strong>Flight Code: </strong><%= @flight.flight_code%></p>
-        <% cost = @flight.price %>
-         <p><strong>Number of Passenger:</strong><%= @number_of_passengers%></p>
-        <p><strong>Price:</strong> <%= cost %></p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Reserve Seat</a></p>
-      </div>
-      <div class="col-lg-6">
-        <h2> Passenger Details </h2>
-        <%= render 'partials/booking_form' %>
-
-      </div>
-    </div>
-  </div>
-</div>
- -->
 <div id="intro">
   <div class="container">
     <div class="row">
@@ -51,7 +28,7 @@
 
           <tr>
             <th>Number of Passenger</th>
-            <td class="pass "><%= @number_of_passengers%></td>
+            <td class="pass "><%= @number_of_passengers.nil? ? 0 : @number_of_passengers %></td>
           </tr>
 
           <tr>
@@ -63,6 +40,7 @@
       </div>
       <div class="col-lg-5">
         <h1 class="text-left">Add Passengers</h1>
+        <hr>
         <%= render 'partials/booking_form' %>
       </div>
     </div> <!--/ .container -->
