--- a/app/views/partials/_reservation_result.html.erb
+++ b/app/views/partials/_reservation_result.html.erb
@@ -1,8 +1,31 @@
-<% if @reservation.nil? %>
-  <p> Invalid confirmation code </p>
-<% else %>
-  <%= @reservation.confirmation_code %>
-  <%= @reservation.flight.from.name %>
-  <%= @reservation.flight.to.name %>
-  <%= link_to "Edit ", edit_booking_path(@reservation), class: "btn btn-default" %>
-  <% end %>
+<div class="container">
+  <div class="top_pad text-center">
+    <% if @reservation.nil? %>
+    <p> Invalid confirmation code </p>
+    <% else %>
+    <table class="table table-hover text-left">
+      <thead>
+        <tr>
+          <th>Confirmation Code</th>
+          <th>Departure Airport</th>
+          <th>Arrival Airport</th>
+          <th> </th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td> <%= @reservation.confirmation_code %></td>
+          <td> <%= @reservation.flight.from.name %> </td>
+          <td> <%= @reservation.flight.to.name %> </td>
+          <td> <%= link_to "Edit ", edit_booking_path(@reservation), class: "btn btn-default" %> </td>
+        </tr>
+      </tbody>
+    </table>
+
+
+
+    <% end %>
+
+  </div>
+</div>
