--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,5 +1,158 @@
+.centered {
+  border:1px solid red;
+  position: auto;
+  top: 600;
+  bottom: 40;
+}
+.bg-class {
+    background-image: url('bg-1.jpg');
 
-body {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -2;
+    background-position: 50% 50%;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+
+}
+
+.form-cn {
+    background-color: rgba(255, 255, 255, 0.85);
+    padding: 20px 30px 30px 30px;
+    border-top: 5px solid #305288;
+    margin-bottom: auto;
+}
+
+.form-cn .form-search .form-field {
+    float: left;
+    padding: 20px 15px;
+    border-right: 1px solid #e6e6e6;
+    font-size: 18px;
+}
+.form-tour .field-region {
+    width: 360px;
+}
+.form-search .form-field {
+    position: relative;
+    font-size: 14px;
+    font-family: 'Open sans';
+    color: #305288;
+    line-height: 29px;
+}
+
+.form-search .form-field.field-select .select select {
+    font-weight: 600;
+    color: #305288;
+}
+.select select {
+    cursor: pointer;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    top: 0;
+    opacity: 0;
+}
+
+.form-cn h2 {
+    margin: 0;
+    color: #333333;
+    font-size: 32px;
+}
+
+.form-search .form-field.field-date .field-input {
+    background: url('../images/icon-calendar.png') no-repeat right center;
+    padding-right: 20px;
+}
+.form-search .form-field .field-input {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    border: 0;
+    outline: none;
+    color: #305288;
+    background-color: transparent;
+    font-weight: 600;
+    border-bottom: 1px dashed #4da981;
+}
+input {
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+}
+a, select, input, button, a:focus, select:focus, input:focus, button:focus {
+    outline: none;
+}
+
+.form-cn .form-search .form-submit {
+    float: left;
+    padding: 12px 15px;
+}
+.form-tour .form-submit {
+    width: 170px;
+}
+
+.form-cn .form-search .form-submit .awe-btn {
+    line-height: 42px;
+    width: 100%;
+    background-position: right 10px center;
+}
+.awe-btn.awe-search {
+    background-color: #305288;
+    color: #fff;
+    border-color: #305288;
+    padding-right: 40px;
+    padding-left: 20px;
+    background-position: right 10px center;
+    background-image: url('../images/icon-search.png');
+}
+.awe-btn.awe-btn-medium {
+    line-height: 45px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 17px;
+}
+.awe-btn:hover, .awe-btn:focus {
+    text-decoration: none;
+    outline: none;
+}
+.awe-btn {
+    display: inline-block;
+    font-family: 'Open Sans';
+    text-decoration: none;
+    background-color: transparent;
+    border: 1px solid #dedede;
+    color: #333333;
+    font-weight: 600;
+    position: relative;
+    outline: none;
+    background-repeat: no-repeat;
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -ms-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+}
+
+.footer{
+  padding: 20px;
+  background-color: #305288;
+  color: #fff;
+  margin-bottom: -10px;
+
+}
+/*body {
   background-color: #f2f2f2;
     font-family: "Lato";
     font-weight: 300;
@@ -9,7 +162,7 @@ body {
 
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
-}
+}*/
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
