--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,41 +1,4 @@
-<section id="contact" name="contact"></section>
-<div id="footerwrap">
-  <div class="container">
-    <div class="col-lg-5">
-      <h3>Address</h3>
-      <p>
-      55, Moleye Str.<br/>
-      Sabo Yaba,<br/>
-      Lagos<br/>
-      Tel (+239-419-419-419)
-      </p>
-    </div>
 
-    <div class="col-lg-7">
-      <h3>Drop Us A Line</h3>
-      <br>
-      <form role="form" action="#" method="post" enctype="plain">
-        <div class="form-group">
-          <label for="name1">Your Name</label>
-          <input type="name" name="Name" class="form-control" id="name1" placeholder="Your Name">
-        </div>
-        <div class="form-group">
-          <label for="email1">Email address</label>
-          <input type="email" name="Mail" class="form-control" id="email1" placeholder="Enter email">
-        </div>
-        <div class="form-group">
-          <label>Your Text</label>
-          <textarea class="form-control" name="Message" rows="3"></textarea>
-        </div>
-        <br>
-        <button type="submit" class="btn btn-large btn-success">SUBMIT</button>
-      </form>
-    </div>
-  </div>
-</div>
-<div id="c">
-  <div class="container">
-    <p>Created by <a href="#">OLALEKAN EYIOWUAWI</a></p>
-
-  </div>
+<div class="navbar footer navbar-fixed-bottom " align = "center">
+  Airstroll By Olalekan Eyiowuawi
 </div>
