--- a/app/views/flight/search.js.erb
+++ b/app/views/flight/search.js.erb
@@ -1,1 +1,4 @@
 $("#flight-result").empty().append("<%= j render('partials/search_result') %>");
+$('html, body').animate({
+        scrollTop: $("#result").offset().top
+    }, 2000);
