--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
-$font-family-sans-serif:  'Poiret One', 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+@import url(https://fonts.googleapis.com/css?family=Simonetta);
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 input[type="date"]{
