--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,13 +1,8 @@
-.centered {
-  border:1px solid red;
-  position: auto;
-  top: 600;
-  bottom: 40;
-}
-.bg-class {
-    background-image: url('bg-1.jpg');
 
-    position: absolute;
+.bg-class {
+    background-image: url('bg-2.jpg');
+
+    /*position: absolute;*/
     top: 0;
     left: 0;
     right: 0;
@@ -21,151 +16,36 @@
 
 }
 
-.form-cn {
-    background-color: rgba(255, 255, 255, 0.85);
-    padding: 20px 30px 30px 30px;
-    border-top: 5px solid #305288;
-    margin-bottom: auto;
+h1 { margin-bottom: 50px; }
+h1, h2 { text-align: center; }
+
+.searchBox {
+  background: rgba(200, 200, 200, 0.8);;
+  margin: 200px auto;
+  padding-bottom: 50px;
+  vertical-align: middle;
 }
 
-.form-cn .form-search .form-field {
-    float: left;
-    padding: 20px 15px;
-    border-right: 1px solid #e6e6e6;
-    font-size: 18px;
+#booking{
+  position: relative;
+  padding-top: 20px;
+  min-height: 680px;
 }
-.form-tour .field-region {
-    width: 360px;
-}
-.form-search .form-field {
-    position: relative;
-    font-size: 14px;
-    font-family: 'Open sans';
-    color: #305288;
-    line-height: 29px;
-}
-
-.form-search .form-field.field-select .select select {
-    font-weight: 600;
-    color: #305288;
-}
-.select select {
-    cursor: pointer;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border: none;
-    outline: none;
-    top: 0;
-    opacity: 0;
-}
-
-.form-cn h2 {
-    margin: 0;
-    color: #333333;
-    font-size: 32px;
-}
-
-.form-search .form-field.field-date .field-input {
-    background: url('../images/icon-calendar.png') no-repeat right center;
-    padding-right: 20px;
-}
-.form-search .form-field .field-input {
-    position: relative;
-    z-index: 2;
-    width: 100%;
-    border: 0;
-    outline: none;
-    color: #305288;
-    background-color: transparent;
-    font-weight: 600;
-    border-bottom: 1px dashed #4da981;
-}
-input {
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    -moz-background-clip: padding;
-    -webkit-background-clip: padding-box;
-    background-clip: padding-box;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-}
-a, select, input, button, a:focus, select:focus, input:focus, button:focus {
-    outline: none;
-}
-
-.form-cn .form-search .form-submit {
-    float: left;
-    padding: 12px 15px;
-}
-.form-tour .form-submit {
-    width: 170px;
-}
-
-.form-cn .form-search .form-submit .awe-btn {
-    line-height: 42px;
-    width: 100%;
-    background-position: right 10px center;
-}
-.awe-btn.awe-search {
-    background-color: #305288;
-    color: #fff;
-    border-color: #305288;
-    padding-right: 40px;
-    padding-left: 20px;
-    background-position: right 10px center;
-    background-image: url('../images/icon-search.png');
-}
-.awe-btn.awe-btn-medium {
-    line-height: 45px;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-size: 17px;
-}
-.awe-btn:hover, .awe-btn:focus {
-    text-decoration: none;
-    outline: none;
-}
-.awe-btn {
-    display: inline-block;
-    font-family: 'Open Sans';
-    text-decoration: none;
-    background-color: transparent;
-    border: 1px solid #dedede;
-    color: #333333;
-    font-weight: 600;
-    position: relative;
-    outline: none;
-    background-repeat: no-repeat;
-    -webkit-transition: all 0.2s linear;
-    -moz-transition: all 0.2s linear;
-    -ms-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-}
-
 .footer{
   padding: 20px;
   background-color: #305288;
   color: #fff;
   margin-bottom: -10px;
+  position: relative;
 
 }
-/*body {
-  background-color: #f2f2f2;
-    font-family: "Lato";
-    font-weight: 300;
-    font-size: 16px;
-    color: #555;
-    padding-top: 50px;
-
-    -webkit-font-smoothing: antialiased;
-    -webkit-overflow-scrolling: touch;
-}*/
+.flight_title{
+  background: #305288;
+  color: white;
+}
 
 /* Titles */
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h6 {
     font-family: "Raleway";
     font-weight: 300;
     color: #333;
@@ -182,131 +62,47 @@ p {
     text-align: center;
 }
 
-/* Links */
-a {
-    color: #3bc492;
-    word-wrap: break-word;
-
-    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
-    transition: color 0.1s ease-in, background 0.1s ease-in;
-}
-
-a:hover,
-a:focus {
-    color: #c0392b;
-    text-decoration: none;
-    outline: 0;
-}
-
-a:before,
-a:after {
-    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
-    transition: color 0.1s ease-in, background 0.1s ease-in;
-}
-
- hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
 
 /* ==========================================================================
    Wrap Sections
    ========================================================================== */
 
 #headerwrap {
-	background-color: #34495e;
+	background-color: #305288;
 	padding-top: 60px;
 }
 
 #headerwrap h1 {
 	margin-top: 30px;
-	color: white;
+	color: blue;
 	font-size: 70px;
 
 }
 
+
+#navigation{
+  background: #305288 !important;
+}
+
 #headerwrap h3 {
-	color: white;
+	color: black;
 	font-size: 30px;
 }
 
 #headerwrap h5 {
-	color: white;
+	color: blue;
 	font-weight: 700;
 	text-align: left;
 }
 
 #headerwrap p {
 	text-align: left;
-	color: white
+	color: blue;
 }
 
-/* intro Wrap */
-
-#intro {
-	padding-top: 50px;
-	border-top: #bdc3c7 solid 5px;
-}
-
-#features {
-	padding-top: 50px;
-	padding-bottom: 50px;
-}
-
-#features .ac a{
-	font-size: 20px;
-}
-
-/* Showcase Wrap */
-
-#showcase {
-	display: block;
-	background-color: #34495e;
-	padding-top: 50px;
-	padding-bottom: 50px;
-}
-
-#showcase h1 {
-	color: white;
-}
-
-#footerwrap {
-	background-color: #2f2f2f;
-	color: white;
-	padding-top: 40px;
-	padding-bottom: 60px;
-	text-align: left;
-}
-
-#footerwrap h3 {
-	font-size: 28px;
-	color: white;
-}
-
-#footerwrap p {
-	color: white;
-	font-size: 18px;
-}
-
-/* Copyright Wrap */
-
-#c {
-	background: #222222;
-	padding-top: 15px;
-	text-align: right;
-}
-
-#c p {
-	color: white
+.top-nav-collapse {
+    padding: 0;
+     background-color: #000 !important;
+     opacity: 0.50;
+     filter: alpha(opacity=90);
 }
