--- a/app/views/partials/_search_result.html.erb
+++ b/app/views/partials/_search_result.html.erb
@@ -1,52 +1,43 @@
 
-  <section id="desc" name="desc"></section>
-  <div id="intro">
-    <div class="container">
-      <div class="row centered">
-        <h1>Search Results</h1>
-        <div class="container">
-          <% if !@search_result.empty? %>
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>From</th>
-                <th>To</th>
-                <th>Airline</th>
-                <th>Departure Date and Time</th>
-                <th>Price</th>
-              </tr>
-            </thead>
-
-            <tbody>
-
-              <% @search_result.each do |flight| %>
-              <tr>
-                <% airline = flight.airplane.airline.name %>
-
-                <td><%= radio_button_tag("book_choice","#{flight.id}")%></td>
-                <td><%= flight.from.name%> <%= flight.from.city%> <%= flight.from.country%></td>
-                <td><%= flight.to.name %> <%=flight.to.city%> <%= flight.to.country%></td>
-                <td><%= airline %> </td>
-                <td><%= flight.dept_date %> Departure Time <%= flight.dept_time%></td>
-                <td><%= flight.price %></td>
-                <% booking_details = {:id =>flight.id,:passenger => params[:flight][:no_of_passenger]} %>
-                <!-- <td><%= link_to "Book", new_booking_path(booking_details), class: "btn btn-info" %></td> -->
-                <td><a class="btn btn-info" id="bkfl" href="<%= new_booking_path(booking_details) %>"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span> Book</a></td>
-
-              </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
-        <% else %>
-        <div class="text-center">
-          There is no result that match your search. search again or see all flights
-        </div>
-        <% end %>
 
 
 
-    </div>
-</div>
-</div>
+<h3 class="text-left flight-header"> Search Result </h3>
+<hr>
+<% if !@search_result.empty? %>
+<% for flight in @search_result %>
+<div class="col-md-3">
+          <!--Image Card-->
+          <% price = flight.price %>
+          <div class="card hoverable">
+              <div class="card-image">
+                  <div class="view overlay hm-white-slight z-depth-1">
+                      <a href="#">
+                          <div class="mask waves-effect"></div>
+                      </a>
+                  </div>
+              </div>
+              <div class="card-content">
+                  <p><%= flight.from.country %> to <%= flight.to.country %></p>
+                  </div>
+              <div class="card-content">
+                <p> Price </p>
+                  <%= number_to_currency(price, locale: :ng) %>
+                  </div>
+              <div class="card-content">
+                  <p>Departure Date</p>
+                  <p><span class="glyphicon glyphicon-calendar"></span> <%= flight.dept_date %></p>
+                  </div>
+              <!--Buttons-->
+              <div class="card-btn text-center">
+                  <% booking_details = {:id =>flight.id} %>
+                  <a class="btn btn-primary btn-md waves-effect waves-light" id="bkfl" href="<%= new_booking_path(booking_details) %>"> Book</a>
+              </div>
+              <!--/.Buttons-->
+          </div>
+          <!--Image Card-->
+      </div>
+      <% end %>
+  <% else %>
+  <p> There are no Flights that matches Your search. Try to search again </p>
+  <% end %>
