--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -2,16 +2,23 @@
   <div id="navigation" class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
         <a class="navbar-brand" href="<%= root_path%>"><b>Airstroll</b></a>
       </div>
+
       <div class="navbar-collapse collapse">
         <!-- <ul class="nav navbar-nav">
           <li class="active"><a href="<%= root_path%>" class="smothscroll">Home</a></li>
           </ul> -->
           <ul class = "nav navbar-nav navbar-right">
-            <li><a href="<%= flights_path %>" class="smothscroll">All Flights</a></li>
+            <li><a href="<%= flights_path %>" class=" smothscroll">All Flights</a></li>
             <% if current_user.nil? %>
-             <li><a href="#" data-toggle="modal" data-target= "#loginmodal" role="dialog">Login</a></li>
+             <li><a href="#" class="" data-toggle="modal" data-target= "#loginmodal" role="dialog">Login</a></li>
              <% else %>
              <li> <%=image_tag(session[:image], class: "img-circle im")  %></li>
              <li>
@@ -26,9 +33,17 @@
 
           </ul>
 
+
+
+
+
       </div><!--/.nav-collapse -->
     </div>
+
+
   </div>
+  <div class="overlay"> </div>
+
 
   <div class="modal fade" id= "loginmodal" tabindex="-1" role="dialog">
   <div class="modal-dialog">
