--- a/app/views/partials/_reservation_result.html.erb
+++ b/app/views/partials/_reservation_result.html.erb
@@ -1,8 +1,9 @@
-<div class="container">
+
   <div class="top_pad text-center">
     <% if @reservation.nil? %>
     <p> Invalid confirmation code </p>
     <% else %>
+    <div class="table-responsive">
     <table class="table table-hover text-left">
       <thead>
         <tr>
@@ -22,10 +23,10 @@
         </tr>
       </tbody>
     </table>
+  </div>
 
 
 
     <% end %>
 
   </div>
-</div>
