--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -15,6 +15,20 @@
     background-size: cover;
 
 }
+.date-picker{
+  background-color: #fff !important;
+  border-radius: 4px;
+}
+.panel {
+    /* margin-bottom: 20px; */
+    background-color: #fff;
+    border: 1px solid;
+    border-radius: 4px;
+    margin-top: 30%;
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
 
 h1 { margin-bottom: 50px; }
 h1, h2 { text-align: center; }
@@ -31,6 +45,14 @@ h1, h2 { text-align: center; }
   padding-top: 20px;
   min-height: 680px;
 }
+/*#profile{
+  background-color: #fff;
+  border: 1px solid;
+  border-radius: 4px;
+  margin-top: 30%;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+}*/
 .footer{
   padding: 20px;
   background-color: #305288;
@@ -42,6 +64,9 @@ h1, h2 { text-align: center; }
 .flight_title{
   background: #305288;
   color: white;
+}
+#flight_header{
+  margin-top: 20%;
 }
 
 /* Titles */
@@ -106,3 +131,134 @@ p {
      opacity: 0.50;
      filter: alpha(opacity=90);
 }
+body {
+  background: #F1F3FA;
+}
+
+/* Profile container */
+.profile {
+  margin: 20px 0;
+  margin-top: 10%;
+}
+
+/* Profile sidebar */
+.profile-sidebar {
+  padding: 20px 0 10px 0;
+  background: #fff;
+}
+.image_profile{
+  height: 127px;
+}
+.profile-userpic img {
+  text-align: center;
+  float: none;
+  margin: 0px 64px 0px 64px;
+  width: 50%;
+  height: 50%;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  border-radius: 50% !important;
+}
+
+.profile-usertitle {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.profile-usertitle-name {
+  color: #5a7391;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 7px;
+}
+
+.profile-usertitle-job {
+  text-transform: uppercase;
+  color: #5b9bd1;
+  font-size: 12px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.profile-userbuttons {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.profile-userbuttons .btn {
+  text-transform: uppercase;
+  font-size: 11px;
+  font-weight: 600;
+  padding: 6px 15px;
+  margin-right: 5px;
+}
+
+.profile-userbuttons .btn:last-child {
+  margin-right: 0px;
+}
+
+.profile-usermenu {
+  margin-top: 30px;
+}
+
+.profile-usermenu ul li {
+  border-bottom: 1px solid #f0f4f7;
+}
+
+.profile-usermenu ul li:last-child {
+  border-bottom: none;
+}
+
+.profile-usermenu ul li a {
+  color: #93a3b5;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.profile-usermenu ul li a i {
+  margin-right: 8px;
+  font-size: 14px;
+}
+
+.profile-usermenu ul li a:hover {
+  background-color: #fafcfd;
+  color: #5b9bd1;
+}
+
+.profile-usermenu ul li.active {
+  border-bottom: none;
+}
+
+.profile-usermenu ul li.active a {
+  color: #5b9bd1;
+  background-color: #f6f9fb;
+  border-left: 2px solid #5b9bd1;
+  margin-left: -2px;
+}
+
+/* Profile Content */
+.profile-content {
+  padding: 20px;
+  background: #fff;
+  min-height: 460px;
+}
+.card-content {
+    .collection {
+      border: none;
+    }
+  }
+  .card {
+  .card-image {
+    position: relative;
+    width: 100%;
+
+    .card-title {
+      position: relative;
+      font-size: 1.28rem;
+      line-height: 1.6em;
+      text-align: center;
+      width: 100%;
+      padding: 10px 15px;
+      text-transform: uppercase;
+      /*background: rgba(0, 0, 0, 0.1);*/
+    }
