--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,104 +1,36 @@
-<!--
-<div id="intro">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-7">
-      <h1 class="text-left"><%=@flight.airplane.airline.name%></h1>
-        <table class="table table-hover">
-         <tbody>
-            <tr>
-              <th>Departure Airport</th>
-              <td class=""><%= @flight.from.name%></td>
-          </tr>
 
-          <tr>
-            <th>Arrival Airport</th>
-            <td class=""><%= @flight.to.name%></td>
-          </tr>
-
-          <tr>
-            <th>Airplane Name</th>
-            <td class=""><%= @flight.airplane.name %></td>
-          </tr>
-
-          <tr>
-            <th>Flight Code</th>
-            <td class=""><%= @flight.flight_code%></td>
-          </tr>
-
-          <tr>
-            <th>Number of Passenger</th>
-            <td class="pass "><%= @number_of_passengers.nil? ? 0 : @number_of_passengers %></td>
-          </tr>
-
-          <tr>
-            <th>Price Per Passenger</th>
-            <td class=""><%= @flight.price %></td>
-          </tr>
-         </tbody>
-        </table>
-      </div>
-      <div class="col-lg-5">
-        <h1 class="text-left">Add Passengers</h1>
-        <hr>
-        <%= render 'partials/booking_form' %>
-      </div>
-    </div> <!--/ .container -->
-  <!-- </div>
-  <hr>
-</div> -->
 <div id="booking">
 <div class="container">
+  <!-- <div class="row">
+  <h4> <%= @flight.from.city %> to <%= @flight.to.city %></h4></div> -->
+<div class="row">
 <div class="col-md-5">
 <div class="panel panel-primary">
  <div class="panel-heading"><%=@flight.airplane.airline.name%></div>
  <div class="panel-body">
-   <p class="text-left"> Departure Airport: <%=  @flight.from.name %> </p>
-   <p class="text-left"> Arrival Airport: <%=  @flight.to.name %> </p>
-   <p class="text-left"> Airplane name: <%=  @flight.airplane.name %> </p>
-   <p class="text-left"> Flight Code: <%=  @flight.flight_code%> </p>
-   <p class="text-left pass"> Number Of Passenger(s): <%= @number_of_passengers.nil? ? 0 : @number_of_passengers %> </p>
-   <p class="text-left"> Price per Passenger: <%=  @flight.price %> </p>
+   <p class="text-left"><strong> Departure Airport:</strong> <%=  @flight.from.name %> </p>
+   <p class="text-left"><strong> Arrival Airport:</strong> <%=  @flight.to.name %> </p>
+   <p class="text-left"><strong> Airplane name: </strong><%=  @flight.airplane.name %> </p>
+   <p class="text-left"><strong> Flight Code: </strong><%=  @flight.flight_code%> </p>
+   <p class="text-left"><strong> Number Of Passenger(s):</strong><span class="pass"> <%= @number_of_passengers.nil? ? 0 : @number_of_passengers %></span> </p>
+   <p class="text-left"><strong> Price per Passenger: </strong><%=  @flight.price %> </p>
 
  </div>
 </div>
 </div>
-</div>
-</div>
 
-<!-- <div class="container">
-<div class="row">
-  <h1 class="text-left"> Arik Airline </h1>
-  <div class="col-lg-4">
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Flight Details</h3>
-  </div>
-  <div class="panel-body">
-    <ul class="list-group">
-      <li class="list-group-item">
-      <strong> Departure Airport</strong>
-      <p> Muritala Muhammed international Airport</p>
-      </li>
-      <li class="list-group-item">
-        <strong> Arrival Airport</strong>
-        <p> Heathrow international Airport</p>
-      </li>
-      <li class="list-group-item">
-        <strong> Flight Code</strong>
-        <p> ASF99 </p>
-      </li>
-      <li class="list-group-item">
-        <strong> Number Of Passengers</strong>
-        <p> 2 </p>
-      </li>
-      <li class="list-group-item">
-        <strong> Price per passenger</strong>
-        <p> 90000 </p>
-      </li>
-    </ul>
+
+  <div class="col-md-5">
+    <div class="panel panel-primary">
+    <div class="panel-heading">
+      Passenger Details
+    </div>
+      <div class="panel-body">
+        <%= render 'partials/booking_form' %>
+      </div>
+      <!-- <div class="panel-footer">Panel footer</div>
+    </div> -->
   </div>
 </div>
 </div>
 </div>
-</div> -->
