--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,10 +1,8 @@
-
-</div>
 <div id="intro">
   <div class="container">
-    <div class="row centered">
-      <h1 class="text-center">Your Flight Has been successfully Booked.</h1>
-      <h3 class="text-center">Here are your Flight Details</h3>
+    <div class="row">
+      <h3 class="text-center">Your Flight Has been successfully Booked.</h3>
+      <h4 class="text-center">Here are your Flight Details</h4>
 
       <div class="col">
 
