feat(view): change the vies
remove all flights page
add paginate to the homepage
add check for user to edit only booking that they make

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -15,6 +15,20 @@
     background-size: cover;
 
 }
+.center-table
+{
+  margin: 0 auto !important;
+  float: none !important;
+}
+/*.list-details{
+  width: 50%;
+}*/
+.details{
+  margin-top: 60px;
+}
+.panel-heading.airline{
+  font-size: 1.8em;
+}
 .date-picker{
   background-color: #fff !important;
   border-radius: 4px;
