--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,12 +1,12 @@
 
 <div id="booking">
 <div class="container">
-  <!-- <div class="row">
-  <h4> <%= @flight.from.city %> to <%= @flight.to.city %></h4></div> -->
+  <!-- <div class="row"> -->
+  <!-- </div> -->
 <div class="row">
 <div class="col-md-5">
 <div class="panel panel-primary">
- <div class="panel-heading"><%=@flight.airplane.airline.name%></div>
+ <div class="panel-heading airline"><%=@flight.airplane.airline.name%></div>
  <div class="panel-body">
    <p class="text-left"><strong> Departure Airport:</strong> <%=  @flight.from.name %> </p>
    <p class="text-left"><strong> Arrival Airport:</strong> <%=  @flight.to.name %> </p>
