--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -42,6 +42,7 @@
               </div>
           </div>
           <% end %>
+
       </div>
 
 
@@ -88,6 +89,7 @@
             <!--Image Card-->
         </div>
         <% end %>
+         <%= will_paginate @flights,renderer: BootstrapPagination::Rails %>
       </div>
 
       </div>
