--- a/app/views/partials/_reservation_result.html.erb
+++ b/app/views/partials/_reservation_result.html.erb
@@ -1,6 +1,6 @@
 
   <div class="top_pad text-center">
-    <% if @reservation.nil? %>
+    <% if @reservation.empty? %>
     <p> Invalid confirmation code </p>
     <% else %>
     <div class="table-responsive">
