--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -52,12 +52,12 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Login</h4>
           </div>
-          <div class="col-md-6">
+          <div class="col l2 offset-l1 s12">
             <a href="/auth/google_oauth2" class="waves-effect waves-light btn red darken-2">Google</a>
           </div>
-          <div class="col-md-6">
+          <div class="col l2 offset-l3 s12">
             <a href="/auth/facebook" class="waves-effect waves-light btn  blue darken-4">Facebook</a>
           </div>
         </div>
-        </div>
       </div>
+    </div>
