feat: edit the view and specs

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,4 +1,9 @@
-
+.col-md-5.display-details.activate{
+  margin-top: -10%;
+}
+.alert{
+  margin-top: 10%;
+}
 .bg-class {
     background-image: url('bg-2.jpg');
 
