--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -53,7 +53,7 @@ h1 { margin-bottom: 50px; }
 h1, h2 { text-align: center; }
 
 .searchBox {
-  background: rgba(200, 200, 200, 0.8);;
+  background: rgba(200, 200, 200, 0.8);
   margin: 200px auto;
   padding-bottom: 50px;
   vertical-align: middle;
@@ -281,3 +281,5 @@ body {
       text-transform: uppercase;
       /*background: rgba(0, 0, 0, 0.1);*/
     }
+  }
+}
