test(feature tests): ensure tests all pass
ensure tests pass

indent the whole views folder

compile the asset pipeline

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Simonetta);
+// @import url(https://fonts.googleapis.com/css?family=Simonetta);
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 input[type="date"]{
