feat(booking): add booking code search on the navbar
add search box for anonymous users to search for bookings
change the neccesary methods to support the feature
ensure tests are still passing

--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -1,4 +1,6 @@
 <section id="home" name="home"></section>
+<%= render 'partials/flashmessage' %>
+
 <div id="headerwrap" class="bg-class">
   <div class="container">
 
