--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -2,6 +2,8 @@
 <div id="booking">
   <div class="container">
     <div class="row">
+      <%= render 'partials/flashmessage' %>
+
       <div class="col-md-5">
         <div class="panel panel-primary">
           <div class="panel-heading"><%=@flight.airplane.airline.name%></div>
