--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,12 +2,7 @@
 <% @active = true %>
 <% @active_reservation = false %>
 <div class="container">
-  <% if notice %>
-  <div class="alert alert-success alert-dismissible" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong>Success!</strong> <%= notice %>
-  </div>
-  <% end %>
+  <%= render 'partials/flashmessage' %>
   <div class="row profile">
     <div class="col-md-3">
       <%= render 'partials/user_side_bar' %>
