--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -3,12 +3,7 @@
   <div class="container">
 
     <div class="row">
-      <% if notice %>
-      <div class="alert alert-danger alert-dismissible" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>OOOPPSS!</strong> <%= notice %>
-      </div>
-      <% end %>
+      <%= render 'partials/flashmessage' %>
       <div class="col-md-5 display-details <%= "activate" if notice %>">
         <div class="panel panel-primary">
           <div class="panel-heading airline"><%=@flight.airplane.airline.name%></div>
